mpfr.v


pub fn ui_div (a Bigfloat, u u64, s Bigfloat, r Round) int {
	return C.mpfr_ui_div (&a, u, &s, r)
}


fn C.mpfr_add_si (&Bigfloat, &Bigfloat, i64, Round) int

pub fn add_si (a Bigfloat, b Bigfloat, i i64, r Round) int {
	return C.mpfr_add_si (&a, &b, i, r)
}

fn C.mpfr_sub_si (&Bigfloat, &Bigfloat, i64, Round) int

pub fn sub_si (a Bigfloat, b Bigfloat, i i64, r Round) int {
	return C.mpfr_sub_si (&a, &b, i, r)
}

fn C.mpfr_si_sub (&Bigfloat, i64, &Bigfloat, Round) int

pub fn si_sub (a Bigfloat, i i64, s Bigfloat, r Round) int {
	return C.mpfr_si_sub (&a, i, &s, r)
}

fn C.mpfr_mul_si (&Bigfloat, &Bigfloat, i64, Round) int

pub fn mul_si (a Bigfloat, b Bigfloat, i i64, r Round) int {
	return C.mpfr_mul_si (&a, &b, i, r)
}

fn C.mpfr_div_si (&Bigfloat, &Bigfloat, i64, Round) int

pub fn div_si (a Bigfloat, b Bigfloat, i i64, r Round) int {
	return C.mpfr_div_si (&a, &b, i, r)
}

fn C.mpfr_si_div (&Bigfloat, i64, &Bigfloat, Round) int

pub fn si_div (a Bigfloat, i i64, s Bigfloat, r Round) int {
	return C.mpfr_si_div (&a, i, &s, r)
}


fn C.mpfr_add_d (&Bigfloat, &Bigfloat, f64, Round) int

pub fn add_d (a Bigfloat, b Bigfloat, f f64, r Round) int {
	return C.mpfr_add_d (&a, &b, f, r)
}

fn C.mpfr_sub_d (&Bigfloat, &Bigfloat, f64, Round) int

pub fn sub_d (a Bigfloat, b Bigfloat, f f64, r Round) int {
	return C.mpfr_sub_d (&a, &b, f, r)
}

fn C.mpfr_d_sub (&Bigfloat, f64, &Bigfloat, Round) int

pub fn d_sub (a Bigfloat, f f64, s Bigfloat, r Round) int {
	return C.mpfr_d_sub (&a, f, &s, r)
}

fn C.mpfr_mul_d (&Bigfloat, &Bigfloat, f64, Round) int

pub fn mul_d (a Bigfloat, b Bigfloat, f f64, r Round) int {
	return C.mpfr_mul_d (&a, &b, f, r)
}

fn C.mpfr_div_d (&Bigfloat, &Bigfloat, f64, Round) int

pub fn div_d (a Bigfloat, b Bigfloat, f f64, r Round) int {
	return C.mpfr_div_d (&a, &b, f, r)
}

fn C.mpfr_d_div (&Bigfloat, f64, &Bigfloat, Round) int

pub fn d_div (a Bigfloat, f f64, s Bigfloat, r Round) int {
	return C.mpfr_d_div (&a, f, &s, r)
}


fn C.mpfr_sqr (&Bigfloat, &Bigfloat, Round) int

pub fn sqr (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_sqr (&a, &b, r)
}


fn C.mpfr_const_pi (&Bigfloat, Round) int

pub fn const_pi (a Bigfloat, r Round) int {
	return C.mpfr_const_pi (&a, r)
}

fn C.mpfr_const_log2 (&Bigfloat, Round) int

pub fn const_log2 (a Bigfloat, r Round) int {
	return C.mpfr_const_log2 (&a, r)
}

fn C.mpfr_const_euler (&Bigfloat, Round) int

pub fn const_euler (a Bigfloat, r Round) int {
	return C.mpfr_const_euler (&a, r)
}

fn C.mpfr_const_catalan (&Bigfloat, Round) int

pub fn const_catalan (a Bigfloat, r Round) int {
	return C.mpfr_const_catalan (&a, r)
}


fn C.mpfr_agm (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn agm (a Bigfloat, b Bigfloat, c Bigfloat, r Round) int {
	return C.mpfr_agm (&a, &b, &c, r)
}


fn C.mpfr_log (&Bigfloat, &Bigfloat, Round) int

pub fn log (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_log (&a, &b, r)
}

fn C.mpfr_log2 (&Bigfloat, &Bigfloat, Round) int

pub fn log2 (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_log2 (&a, &b, r)
}

fn C.mpfr_log10 (&Bigfloat, &Bigfloat, Round) int

pub fn log10 (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_log10 (&a, &b, r)
}

fn C.mpfr_log1p (&Bigfloat, &Bigfloat, Round) int

pub fn log1p (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_log1p (&a, &b, r)
}

fn C.mpfr_log_ui (&Bigfloat, u64, Round) int

pub fn log_ui (a Bigfloat, f u64, r Round) int {
	return C.mpfr_log_ui (&a, f, r)
}


fn C.mpfr_exp (&Bigfloat, &Bigfloat, Round) int

pub fn exp (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_exp (&a, &b, r)
}

fn C.mpfr_exp2 (&Bigfloat, &Bigfloat, Round) int

pub fn exp2 (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_exp2 (&a, &b, r)
}

fn C.mpfr_exp10 (&Bigfloat, &Bigfloat, Round) int

pub fn exp10 (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_exp10 (&a, &b, r)
}

fn C.mpfr_expm1 (&Bigfloat, &Bigfloat, Round) int

pub fn expm1 (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_expm1 (&a, &b, r)
}

fn C.mpfr_eint (&Bigfloat, &Bigfloat, Round) int

pub fn eint (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_eint (&a, &b, r)
}

fn C.mpfr_li2 (&Bigfloat, &Bigfloat, Round) int

pub fn li2 (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_li2 (&a, &b, r)
}


fn C.mpfr_cmp  (&Bigfloat, &Bigfloat) int

pub fn cmp  (a Bigfloat, b Bigfloat) int {
	return C.mpfr_cmp  (&a, &b)
}

fn C.mpfr_cmp3 (&Bigfloat, &Bigfloat, int) int

pub fn cmp3 (a Bigfloat, b Bigfloat, i int) int {
	return C.mpfr_cmp3 (&a, &b, i)
}

fn C.mpfr_cmp_d (&Bigfloat, f64) int

pub fn cmp_d (a Bigfloat, f f64) int {
	return C.mpfr_cmp_d (&a, f)
}

// fn C.mpfr_cmp_ld (&Bigfloat, f80) int

// pub fn cmp_ld (a Bigfloat, i f80) int {
// 	return C.mpfr_cmp_ld (&a, i)
// }

fn C.mpfr_cmp_ui (&Bigfloat, u64) int

pub fn cmp_ui (a Bigfloat, u u64) int {
	return C.mpfr_cmp_ui (&a, u)
}

fn C.mpfr_cmp_si (&Bigfloat, i64) int

pub fn cmp_si (a Bigfloat, i i64) int {
	return C.mpfr_cmp_si (&a, i)
}

fn C.mpfr_cmp_ui_2exp (&Bigfloat, u64, i64) int

pub fn cmp_ui_2exp (a Bigfloat, u u64, e i64) int {
	return C.mpfr_cmp_ui_2exp (&a, u, e)
}

fn C.mpfr_cmp_si_2exp (&Bigfloat, i64, i64) int

pub fn cmp_si_2exp (a Bigfloat, i i64, j i64) int {
	return C.mpfr_cmp_si_2exp (&a, i, j)
}

fn C.mpfr_cmpabs (&Bigfloat, &Bigfloat) int

pub fn cmpabs (a Bigfloat, b Bigfloat) int {
	return C.mpfr_cmpabs (&a, &b)
}

fn C.mpfr_cmpabs_ui (&Bigfloat, u64) int

pub fn cmpabs_ui (a Bigfloat, u u64) int {
	return C.mpfr_cmpabs_ui (&a, u)
}

fn C.mpfr_reldiff (&Bigfloat, &Bigfloat, &Bigfloat, Round)

pub fn reldiff (a Bigfloat, b Bigfloat, c Bigfloat, r Round) {
	C.mpfr_reldiff (&a, &b, &c, r)
}

fn C.mpfr_eq (&Bigfloat, &Bigfloat, u64) int

pub fn eq (a Bigfloat, b Bigfloat, f u64) int {
	return C.mpfr_eq (&a, &b, f)
}

fn C.mpfr_sgn (&Bigfloat) int

pub fn sgn (a Bigfloat) int {
	return C.mpfr_sgn (&a)
}


fn C.mpfr_mul_2exp (&Bigfloat, &Bigfloat, u64, Round) int

pub fn mul_2exp (a Bigfloat, b Bigfloat, f u64, r Round) int {
	return C.mpfr_mul_2exp (&a, &b, f, r)
}

fn C.mpfr_div_2exp (&Bigfloat, &Bigfloat, u64, Round) int

pub fn div_2exp (a Bigfloat, b Bigfloat, f u64, r Round) int {
	return C.mpfr_div_2exp (&a, &b, f, r)
}

fn C.mpfr_mul_2ui (&Bigfloat, &Bigfloat, u64, Round) int

pub fn mul_2ui (a Bigfloat, b Bigfloat, f u64, r Round) int {
	return C.mpfr_mul_2ui (&a, &b, f, r)
}

fn C.mpfr_div_2ui (&Bigfloat, &Bigfloat, u64, Round) int

pub fn div_2ui (a Bigfloat, b Bigfloat, f u64, r Round) int {
	return C.mpfr_div_2ui (&a, &b, f, r)
}

fn C.mpfr_mul_2si (&Bigfloat, &Bigfloat, i64, Round) int

pub fn mul_2si (a Bigfloat, b Bigfloat, i i64, r Round) int {
	return C.mpfr_mul_2si (&a, &b, i, r)
}

fn C.mpfr_div_2si (&Bigfloat, &Bigfloat, i64, Round) int

pub fn div_2si (a Bigfloat, b Bigfloat, i i64, r Round) int {
	return C.mpfr_div_2si (&a, &b, i, r)
}


fn C.mpfr_rint (&Bigfloat, &Bigfloat, Round) int

pub fn rint (b Bigfloat, r Round) Bigfloat {
	a := new()
	retval := C.mpfr_rint (&a, &b, r)
	set_retval(retval)
	return a
}

fn C.mpfr_roundeven (&Bigfloat, &Bigfloat) int

pub fn roundeven (a Bigfloat, b Bigfloat) int {
	return C.mpfr_roundeven (&a, &b)
}

fn C.mpfr_round (&Bigfloat, &Bigfloat) int

pub fn round (a Bigfloat, b Bigfloat) int {
	return C.mpfr_round (&a, &b)
}

fn C.mpfr_trunc (&Bigfloat, &Bigfloat) int

pub fn trunc (a Bigfloat, b Bigfloat) int {
	return C.mpfr_trunc (&a, &b)
}

fn C.mpfr_ceil (&Bigfloat, &Bigfloat) int

pub fn ceil (a Bigfloat, b Bigfloat) int {
	return C.mpfr_ceil (&a, &b)
}

fn C.mpfr_floor (&Bigfloat, &Bigfloat) int

pub fn floor (a Bigfloat, b Bigfloat) int {
	return C.mpfr_floor (&a, &b)
}

fn C.mpfr_rint_roundeven (&Bigfloat, &Bigfloat, Round) int

pub fn rint_roundeven (a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_rint_roundeven (&a, &b, r)
}

fn C.mpfr_rint_round (&Bigfloat, &Bigfloat, Round) int

pub fn rint_round (mut a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_rint_round (&a, &b, r)
}

fn C.mpfr_rint_trunc (&Bigfloat, &Bigfloat, Round) int

pub fn rint_trunc (b Bigfloat, r Round) Bigfloat {
	a := new()
	retval := C.mpfr_rint_trunc (&a, &b, r)
	set_retval(retval)
	return a
}

fn C.mpfr_rint_ceil (&Bigfloat, &Bigfloat, Round) int

pub fn rint_ceil (mut a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_rint_ceil (&a, &b, r)
}

fn C.mpfr_rint_floor (&Bigfloat, &Bigfloat, Round) int

pub fn rint_floor (mut a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_rint_floor (&a, &b, r)
}

fn C.mpfr_frac (&Bigfloat, &Bigfloat, Round) int

pub fn frac (mut a Bigfloat, b Bigfloat, r Round) int {
	return C.mpfr_frac (&a, &b, r)
}

fn C.mpfr_modf (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn modf (a Bigfloat, b Bigfloat, c Bigfloat, r Round) int {
	return C.mpfr_modf (&a, &b, &c, r)
}

fn C.mpfr_remquo (&Bigfloat, &i64, &Bigfloat, &Bigfloat, Round) int

pub fn remquo (a Bigfloat, i &i64, g Bigfloat, s Bigfloat, r Round) int {
	return C.mpfr_remquo (&a, i, &g, &s, r)
}

fn C.mpfr_remainder (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

pub fn remainder (b Bigfloat, c Bigfloat) Bigfloat {
	a := new()
	ctx := get_def_print_ctx()
	retval := C.mpfr_remainder (&a, &b, &c, ctx.rnd)
	set_retval(retval)
	return a
}

fn C.mpfr_fmod (&Bigfloat, &Bigfloat, &Bigfloat, Round) int

// % : the quotient and the difference are both rounded toward zero
pub fn (b Bigfloat) % (c Bigfloat) Bigfloat {
	a := new()
	retval := C.mpfr_fmod (&a, &b, &c, .rndz)
	set_retval(retval)
	return a
}

pub fn fmod (b Bigfloat, c Bigfloat, r Round) Bigfloat {
	a := new()
	retval := C.mpfr_fmod (&a, &b, &c, r)
	set_retval(retval)
	return a
}

fn C.mpfr_fmodquo (&Bigfloat, &i64, &Bigfloat, &Bigfloat, Round) int

pub fn fmodquo (a Bigfloat, i &i64, g Bigfloat, s Bigfloat, r Round) int {
	return C.mpfr_fmodquo (&a, i, &g, &s, r)
}


fn C.mpfr_fits_ulong_p (&Bigfloat, Round) int

pub fn fits_ulong_p (a Bigfloat, r Round) int {
	return C.mpfr_fits_ulong_p (&a, r)
}

fn C.mpfr_fits_slong_p (&Bigfloat, Round) int

pub fn fits_slong_p (a Bigfloat, r Round) int {
	return C.mpfr_fits_slong_p (&a, r)
}

fn C.mpfr_fits_uint_p (&Bigfloat, Round) int

pub fn fits_uint_p (a Bigfloat, r Round) int {
	return C.mpfr_fits_uint_p (&a, r)
}

fn C.mpfr_fits_sint_p (&Bigfloat, Round) int

pub fn fits_sint_p (a Bigfloat, r Round) int {
	return C.mpfr_fits_sint_p (&a, r)
}

fn C.mpfr_fits_ushort_p (&Bigfloat, Round) int

pub fn fits_ushort_p (a Bigfloat, r Round) int {
	return C.mpfr_fits_ushort_p (&a, r)
}

fn C.mpfr_fits_sshort_p (&Bigfloat, Round) int

pub fn fits_sshort_p (a Bigfloat, r Round) int {
	return C.mpfr_fits_sshort_p (&a, r)
}

fn C.mpfr_fits_uintmax_p (&Bigfloat, Round) int

pub fn fits_uintmax_p (a Bigfloat, r Round) int {
	return C.mpfr_fits_uintmax_p (&a, r)
}

fn C.mpfr_fits_intmax_p (&Bigfloat, Round) int

pub fn fits_intmax_p (a Bigfloat, r Round) int {
	return C.mpfr_fits_intmax_p (&a, r)
}


fn C.mpfr_extract (&gmp.Bigint, &Bigfloat, u32)

pub fn extract (a gmp.Bigint, s Bigfloat, u u32) {
	C.mpfr_extract (&a, &s, u)
}

fn C.mpfr_swap (&Bigfloat, &Bigfloat)

pub fn swap (a Bigfloat, b Bigfloat) {
	C.mpfr_swap (&a, &b)
}

fn C.mpfr_dump (&Bigfloat)

pub fn mpfr_dump (a Bigfloat) {
	C.mpfr_dump (&a)
}


fn C.mpfr_nan_p (&Bigfloat) int

pub fn nan_p(a Bigfloat) bool {
	return C.mpfr_nan_p (&a) != 0
}

fn C.mpfr_inf_p (&Bigfloat) int

pub fn inf_p (a Bigfloat) bool {
	return C.mpfr_inf_p (&a) != 0
}

fn C.mpfr_number_p (&Bigfloat) int

pub fn number_p (a Bigfloat) int {
	return C.mpfr_number_p (&a)
}

fn C.mpfr_integer_p (&Bigfloat) int

pub fn integer_p (a Bigfloat) int {
	return C.mpfr_integer_p (&a)
}

fn C.mpfr_zero_p (&Bigfloat) int

pub fn zero_p (a Bigfloat) bool {
	return C.mpfr_zero_p (&a) != 0
}

fn C.mpfr_regular_p (&Bigfloat) int

pub fn regular_p (a Bigfloat) int {
	return C.mpfr_regular_p (&a)
}


fn C.mpfr_greater_p (&Bigfloat, &Bigfloat) int

pub fn greater_p (a Bigfloat, b Bigfloat) int {
	return C.mpfr_greater_p (&a, &b)
}
